--- a/MauiBlazorADSB_02/Shared/NavMenu.razor
+++ b/MauiBlazorADSB_02/Shared/NavMenu.razor
@@ -24,6 +24,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <!--openskyfetchdata-->
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="openskyfetchdata">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> OpenSky Fetch data
+            </NavLink>
+        </div>
     </nav>
 </div>
 
