--- a/MauiBlazorADSB_02/Shared/NavMenu.razor
+++ b/MauiBlazorADSB_02/Shared/NavMenu.razor
@@ -30,6 +30,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> OpenSky Fetch data
             </NavLink>
         </div>
+        <!--Aviation-->
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="aviation">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Aviation
+            </NavLink>
+        </div>
     </nav>
 </div>
 
