--- a/MauiBlazorADSB_02/Shared/NavMenu.razor
+++ b/MauiBlazorADSB_02/Shared/NavMenu.razor
@@ -36,6 +36,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Aviation
             </NavLink>
         </div>
+        <!--openskyfetchmap-->
+       @*  <div class="nav-item px-3">
+            <NavLink class="nav-link" href="openskyfetchmap">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> OpenSky Fetch Map
+            </NavLink>
+        </div> *@
     </nav>
 </div>
 
